# commit-card

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: jekyll-gh-pages.yml
docs/: Introducing_Commit_Card.md
src/: main.py  models.py
src/data_extraction/: git_extractor.py  repo_analyzer.py
src/llm/: check_gemini_models.py  client.py
src/orchestration/: manager.py
src/persistence/: firestore.py
